--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
+# PORTA DO TOMCAT
+server.port=8083
 # DATA SOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/bd_api_usuarios3
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=coti
-
 # JPA + HIBERNATE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+# CHAVE SECRETA PARA ASSINATURA DOS TOKENS JWT
+jwt.secret=cotiinformatica2023
 
 
